--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
     <!-- Conteúdo Principal -->
     <main id="main-content">
     <h2 style="text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);">Personalize o cantinho do seu pet do seu jeito... ou do dele!</h2>
-        <img id="profile-image" src="images/r2cat.jpg" alt="Foto de Perfil">
+        <img id="profile-image" src="r2cat.jpg" alt="Foto de Perfil">
     </main>
 
     <!-- Contêiner do Slideshow -->
     <div id="slideshow-wrapper">
         <div id="slideshow-container">
-            <img class="slideshow-image" src="images/scoobydoohouse.png" alt="Slideshow Image 1">
-            <img class="slideshow-image" src="images/gardenhousecat.jpg" alt="Slideshow Image 2">
-            <img class="slideshow-image" src="images/kombidog.jpg" alt="Slideshow Image 3">
-            <img class="slideshow-image" src="images/tacohousedog.png" alt="Slideshow Image 4">
-            <img class="slideshow-image" src="images/pokeballcat.jpg" alt="Slideshow Image 5">
-            <img class="slideshow-image" src="images/r2cat.jpg" alt="Slideshow Image 6">
-            <img class="slideshow-image" src="images/trianglehouse.jpg" alt="Slideshow Image 7">
+            <img class="slideshow-image" src="scoobydoohouse.png" alt="Slideshow Image 1">
+            <img class="slideshow-image" src="gardenhousecat.jpg" alt="Slideshow Image 2">
+            <img class="slideshow-image" src="kombidog.jpg" alt="Slideshow Image 3">
+            <img class="slideshow-image" src="tacohousedog.png" alt="Slideshow Image 4">
+            <img class="slideshow-image" src="pokeballcat.jpg" alt="Slideshow Image 5">
+            <img class="slideshow-image" src="r2cat.jpg" alt="Slideshow Image 6">
+            <img class="slideshow-image" src="trianglehouse.jpg" alt="Slideshow Image 7">
         </div>
     </div>
 
