--- a/index.html
+++ b/index.html
@@ -42,84 +42,84 @@
     <section class="product-gallery">
         <a href="produto1.html">
             <div class="product">
-                <img src="images/scoobydoohouse.png" alt="Casinha Scooby Doo">
+                <img src="scoobydoohouse.png" alt="Casinha Scooby Doo">
                 <h3>Casinha Scooby Doo</h3>
                 <p>R$ 750,00</p>
             </div>
         </a>
         <a href="produto2.html">
             <div class="product">
-                <img src="images/gardenhousecat.jpg" alt="Casinha Garden">
+                <img src="gardenhousecat.jpg" alt="Casinha Garden">
                 <h3>Casinha Garden</h3>
                 <p>R$ 2.000,00</p>
             </div>
         </a>
         <a href="produto3.html">
             <div class="product">
-                <img src="images/kombidog.jpg" alt="Casinha Kombi">
+                <img src="kombidog.jpg" alt="Casinha Kombi">
                 <h3>Casinha Kombi</h3>
                 <p>R$ 600,00</p>
             </div>
         </a>
         <a href="produto4.html">
             <div class="product">
-                <img src="images/pokeballcat.jpg" alt="Cama Pokébola">
+                <img src="pokeballcat.jpg" alt="Cama Pokébola">
                 <h3>Cama Pokébola</h3>
                 <p>R$ 450,00</p>
             </div>
         </a>
         <a href="produto5.html">
             <div class="product">
-                <img src="images/r2cat.jpg" alt="Cama R2-D2">
+                <img src="r2cat.jpg" alt="Cama R2-D2">
                 <h3>Cama R2-D2</h3>
                 <p>R$ 750,00</p>
             </div>
         </a>
         <a href="produto6.html">
             <div class="product">
-                <img src="images/trianglehouse.jpg" alt="Casinha Triangular">
+                <img src="trianglehouse.jpg" alt="Casinha Triangular">
                 <h3>Casinha Triangular</h3>
                 <p>R$ 1.700,00</p>
             </div>
         </a>
         <a href="produto7.html">
             <div class="product">
-                <img src="images/tacohousedog.png" alt="Casinha Taco Dog">
+                <img src="tacohousedog.png" alt="Casinha Taco Dog">
                 <h3>Casinha Taco Dog</h3>
                 <p>R$ 1.200,00</p>
             </div>
         </a>
         <a href="produto8.html">
             <div class="product">
-                <img src="images/trailerhousedog.png" alt="Casinha Trailer">
+                <img src="trailerhousedog.png" alt="Casinha Trailer">
                 <h3>Casinha Trailer</h3>
                 <p>R$ 1.700,00</p>
             </div>
         </a>
         <a href="produto9.html">
             <div class="product">
-                <img src="images/trailerhousedog2.png" alt="Casinha Trailer II">
+                <img src="trailerhousedog2.png" alt="Casinha Trailer II">
                 <h3>Casinha Trailer II</h3>
                 <p>R$ 1.700,00</p>
             </div>
         </a>
         <a href="produto10.html">
             <div class="product">
-                <img src="images/hotdoghouse.png" alt="Casinha Hot Dog">
+                <img src="hotdoghouse.png" alt="Casinha Hot Dog">
                 <h3>Casinha Hot Dog</h3>
                 <p>R$ 1.700,00</p>
             </div>
         </a>
         <a href="produto11.html">
             <div class="product">
-                <img src="images/bedsidebed.jpg" alt="Casinha Bedside">
+                <img src="bedsidebed.jpg" alt="Casinha Bedside">
                 <h3>Casinha Bedside</h3>
                 <p>R$ 1.700,00</p>
             </div>
         </a>
         <a href="produto12.html">
             <div class="product">
-                <img src="images/casinhacasinha.png" alt="Casinha Casinha">
+                <img src="casinhacasinha.png" alt="Casinha Casinha">
                 <h3>Casinha Casinha</h3>
                 <p>R$ 1.700,00</p>
             </div>
@@ -130,9 +130,9 @@
     <footer id="footer">
         <div class="footer-content">
             <div class="social-media">
-                <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+                <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
             </div>
             <div class="contact-info">
                 <p>Email: keysser.santana@aluno.fmpsc.edu.br</p>
