--- a/produto11.html
+++ b/produto11.html
@@ -40,11 +40,11 @@
       </head>
       <body>
         <div class="container">
-          <img src="images/bedsidebed.jpg" alt="Casinha Garden" width="300" height="200">
+          <img src="bedsidebed.jpg" alt="Casinha Garden" width="300" height="200">
           <h3>Casinha Bedside</h3>
           <p>R$ 1.700,00</p>
         </div>
-    <!-- Conteúdo Principal -->
+        <!-- Conteúdo Principal -->
     <main id="main-content">
         <h2>Formas de Pagamento</h2>
         <section class="payment-options">
@@ -59,25 +59,25 @@
             <h3>Bandeiras Aceitas</h3>
             <p>Trabalhamos com as principais bandeiras de cartão de crédito e débito:</p>
             <div class="card-brands">
-                <img src="images/visa.png" alt="Visa" width="60" height="60">
-                <img src="images/mastercard.png" alt="MasterCard" width="60" height="60">
-                <img src="images/american-express.png" alt="American Express" width="60" height="60">
-                <img src="images/elo.png" alt="Elo" width="60" height="60">
+                <img src="visa.png" alt="Visa" width="60" height="60">
+                <img src="mastercard.png" alt="MasterCard" width="60" height="60">
+                <img src="american-express.png" alt="American Express" width="60" height="60">
+                <img src="elo.png" alt="Elo" width="60" height="60">
                 <!-- Adicione mais logos conforme necessário -->
             </div>
 
             <h3>Outras Formas de Pagamento</h3>
             <div class="payment-methods">
                 <div class="method">
-                    <img src="images/credito.png" alt="Cartão de Crédito" width="60" height="60">
+                    <img src="credito.png" alt="Cartão de Crédito" width="60" height="60">
                     <p>Cartão de Débito</p>
                 </div>
                 <div class="method">
-                    <img src="images/pix.png" alt="Pix" width="60" height="60">
+                    <img src="pix.png" alt="Pix" width="60" height="60">
                     <p>Pix</p>
                 </div>
                 <div class="method">
-                    <img src="images/boleto-simbolo.png" alt="Boleto" width="60" height="60">
+                    <img src="boleto-simbolo.png" alt="Boleto" width="60" height="60">
                     <p>Boleto Bancário</p>
                 </div>
             </div>
@@ -92,9 +92,9 @@
     <footer id="footer">
         <div class="footer-content">
             <div class="social-media">
-                <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+                <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
             </div>
             <div class="contact-info">
                 <p>Email: keysser.santana@aluno.fmpsc.edu.br</p>
