--- a/envieideia.html
+++ b/envieideia.html
@@ -30,19 +30,19 @@
 
     <div class="slideshow-container">
         <div class="slide">
-            <img src="images/cachorro.png" alt="Modelo 1">
+            <img src="cachorro.png" alt="Modelo 1">
             <div class="caption">Cachorro</div>
         </div>
         <div class="slide">
-            <img src="images/gato.png" alt="Modelo 2">
+            <img src="gato.png" alt="Modelo 2">
             <div class="caption">Gato</div>
         </div>
         <div class="slide">
-            <img src="images/passaro.png" alt="Modelo 3">
+            <img src="passaro.png" alt="Modelo 3">
             <div class="caption">Pássaro</div>
         </div>
         <div class="slide">
-            <img src="images/coelho.png" alt="Modelo 4">
+            <img src="coelho.png" alt="Modelo 4">
             <div class="caption">Coelho</div>
         </div>
         <!-- Botões de navegação -->
@@ -58,10 +58,10 @@
     </div>
 
     <div class="thumbnail-container">
-        <img class="thumbnail" src="images/cachorro.png" onclick="currentSlide(1)" alt="Modelo 1">
-        <img class="thumbnail" src="images/gato.png" onclick="currentSlide(2)" alt="Modelo 2">
-        <img class="thumbnail" src="images/passaro.png" onclick="currentSlide(3)" alt="Modelo 3">
-        <img class="thumbnail" src="images/coelho.png" onclick="currentSlide(4)" alt="Modelo 4">
+        <img class="thumbnail" src="cachorro.png" onclick="currentSlide(1)" alt="Modelo 1">
+        <img class="thumbnail" src="gato.png" onclick="currentSlide(2)" alt="Modelo 2">
+        <img class="thumbnail" src="passaro.png" onclick="currentSlide(3)" alt="Modelo 3">
+        <img class="thumbnail" src="coelho.png" onclick="currentSlide(4)" alt="Modelo 4">
     </div>
 
     <script src="eiscripts.js"></script>
