--- a/contato.html
+++ b/contato.html
@@ -23,7 +23,7 @@
     <main id="main-content">
         <div class="content-box">
             <h2>Meus Contatos</h2>
-            <img id="profile-image" src="images/eu.png" alt="Foto de Perfil"> 
+            <img id="profile-image" src="eu.png" alt="Foto de Perfil"> 
 
             <h2 style="text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);">Keysser Santana</h2>
             <p>Formação Acadêmica:</p>
@@ -37,9 +37,9 @@
     <footer id="footer">
         <div class="footer-content">
             <div class="social-media">
-                <a href="#"><img src="images/facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="images/twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="images/instagram-icon.png" alt="Instagram"></a>
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+                <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
             </div>
         </div>
     </footer>
