--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 
     <!-- Conteúdo Principal -->
     <main id="main-content">
-    <h2 style="text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);">Personalize o cantinho do seu pet do seu jeito... ou do dele!</h2>
+            <h2 style="text-shadow: 1px 6px 10px rgba(9, 9, 9, 3.5); font-weight: bold; -webkit-text-stroke: 1px black;">
+            Personalize o cantinho do seu pet do seu jeito... ou do dele!
+        </h2>   
         <img id="profile-image" src="r2cat.jpg" alt="Foto de Perfil">
     </main>
 
