--- a/envieideia.html
+++ b/envieideia.html
@@ -22,9 +22,9 @@
     
     <form action="/action_page.php">
         <label for="fname">Nome Completo:</label><br>
-        <input type="text" id="fname" name="fname" value="Nome"><br>
+        <input type="text" id="fname" name="fname" value=""><br>
         <label for="lname">Telefone para Contato:</label><br>
-        <input type="text" id="lname" name="lname" value="Telefone"><br><br>
+        <input type="text" id="lname" name="lname" value=""><br><br>
         <input type="submit" value="Submit">
     </form>
 
