--- a/produto2.html
+++ b/produto2.html
@@ -22,7 +22,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formas de Pagamento - My Pet's House</title>
-    <link rel="stylesheet" href="cttstyles.css">
+    <link rel="stylesheet" href="eistyles.css">
 </head>
 <body>
     <style>
