--- a/produto1.html
+++ b/produto1.html
@@ -86,6 +86,23 @@
             <a href="index.html" class="button">Voltar para a Galeria de Produtos</a>
         </section>
     </main>
+
+    <!-- Barra de Rodapé -->
+    <footer id="footer">
+        <div class="footer-content">
+            <div class="social-media">
+                <a href="#"><img src=facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+                <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+            </div>
+            <div class="contact-info">
+                <p>Email: keysser.santana@aluno.fmpsc.edu.br</p>
+                <p>Telefone: (48) 98864-2436</p>
+            </div>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
+
