--- a/produto1.html
+++ b/produto1.html
@@ -21,7 +21,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formas de Pagamento - My Pet's House</title>
-    <link rel="stylesheet" href="eistyles.css">
+    <link rel="stylesheet" href="produtos.css">
 </head>
 <body>
     <style>
