--- a/produto1.html
+++ b/produto1.html
@@ -91,7 +91,7 @@
     <footer id="footer">
         <div class="footer-content">
             <div class="social-media">
-                <a href="#"><img src=facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
                 <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
                 <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
             </div>
