--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
             </a>
             <a href="https://www.instagram.com/keyssersantana/" target="_blank">
                 <img src="instagram-icon.png" alt="Instagram">
+            <a href="https://wa.me/48988642436" target="_blank">
+                <img src="whatsapp.png" alt="Whatsapp">
+            </a>
             </a>
         </div>
         <div class="contact-info">
