--- a/produto5.html
+++ b/produto5.html
@@ -88,19 +88,22 @@
         </section>
     </main>
 
-    <!-- Barra de Rodapé -->
-    <footer id="footer">
-        <div class="footer-content">
-            <div class="social-media">
-                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-                <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
-                <a href="#"><img src="whatsapp.png" alt="Whatsapp"></a>
-            </div>
-            <div class="contact-info">
-                <p>Email: keysser.santana@aluno.fmpsc.edu.br</p>
-                <p>Telefone: (48) 98864-2436</p>
-            </div>
+           <!-- Barra de Rodapé -->
+<footer id="footer">
+    <div class="footer-content">
+        <div class="social-media">
+            <a href="https://www.facebook.com/keysser.santana/?paipv=0&eav=Afa6IDxg5koLgTH9_PRuN3s1jJ70s7DljxXkekdADCykaHD6CITpPa3I95OobGWB_j8&_rdr" target="_blank">
+                <img src="facebook-icon.png" alt="Facebook">
+            </a>
+            <a href="https://br.linkedin.com/in/keysser-santana-8562851ab" target="_blank">
+                <img src="twitter-icon.png" alt="Twitter">
+            </a>
+            <a href="https://www.instagram.com/keyssersantana/" target="_blank">
+                <img src="instagram-icon.png" alt="Instagram">
+            <a href="https://wa.me/48988642436" target="_blank">
+                <img src="whatsapp.png" alt="Whatsapp">
+            </a>
+            </a>
         </div>
     </footer>
 
