--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
 
     <!-- Conteúdo Principal -->
     <main id="main-content">
-            <h2 style="text-shadow: 1px 6px 10px rgba(9, 9, 9, 3.5); font-weight: bold; -webkit-text-stroke: 1px black;">
-            Personalize o cantinho do seu pet do seu jeito... ou do dele!
-        </h2>   
-        <img id="profile-image" src="r2cat.jpg" alt="Foto de Perfil">
-    </main>
-
+    <h2 style="text-shadow: 1px 6px 10px rgba(9, 9, 9, 3.5); font-weight: bold; -webkit-text-stroke: 1px black; background-color: white; border: 2px solid white; padding: 10px;">
+        Personalize o cantinho do seu pet do seu jeito... ou do dele!
+    </h2>        
+    <img id="profile-image" src="images/r2cat.jpg" alt="Foto de Perfil">
+</main>
     <!-- Contêiner do Slideshow -->
     <div id="slideshow-wrapper">
         <div id="slideshow-container">
