--- a/produto1.html
+++ b/produto1.html
@@ -42,6 +42,7 @@
           <img src="scoobydoohouse.png" alt="Casinha Garden" width="300" height="200">
           <h3>Casinha Scooby Doo!</h3>
           <p>R$ 750,00</p>
+        <a href="pagamento.html" class="button-comprar">Comprar</a>
         </div>
     <!-- Conteúdo Principal -->
     <main id="main-content">
