--- a/produto2.html
+++ b/produto2.html
@@ -43,6 +43,7 @@
           <img src="gardenhousecat.jpg" alt="Casinha Garden" width="300" height="200">
           <h3>Casinha Garden</h3>
           <p>R$ 2.000,00</p>
+        <a href="pagamento.html" class="button-comprar">Comprar</a>
         </div>
     <!-- Conteúdo Principal -->
     <main id="main-content">
