--- a/produto3.html
+++ b/produto3.html
@@ -43,6 +43,7 @@
           <img src="kombidog.jpg" alt="Casinha Garden" width="300" height="200">
           <h3>Casinha Kombi</h3>
           <p>R$ 600,00</p>
+        <a href="pagamento.html" class="button-comprar">Comprar</a>
         </div>
        <!-- Conteúdo Principal -->
     <main id="main-content">
