--- a/produto4.html
+++ b/produto4.html
@@ -43,6 +43,7 @@
           <img src="pokeballcat.jpg" alt="Casinha Garden" width="300" height="200">
           <h3>Cama Pokébola</h3>
           <p>R$ 450,00</p>
+        <a href="pagamento.html" class="button-comprar">Comprar</a>
         </div>
        <!-- Conteúdo Principal -->
     <main id="main-content">
