--- a/produto5.html
+++ b/produto5.html
@@ -43,6 +43,7 @@
           <img src="r2cat.jpg" alt="Casinha Garden" width="300" height="200">
           <h3>Cama R2-D2</h3>
           <p>R$ 750,00</p>
+            <a href="pagamento.html" class="button-comprar">Comprar</a>
         </div>
       <!-- Conteúdo Principal -->
     <main id="main-content">
