--- a/produto7.html
+++ b/produto7.html
@@ -43,6 +43,7 @@
           <img src="tacohousedog.png" alt="Casinha Garden" width="300" height="200">
           <h3>Casinha Taco Dog</h3>
           <p>R$ 1.200,00</p>
+            <a href="pagamento.html" class="button-comprar">Comprar</a>
         </div>
        <!-- Conteúdo Principal -->
     <main id="main-content">
