--- a/produto8.html
+++ b/produto8.html
@@ -43,6 +43,7 @@
           <img src="trailerhousedog.png" alt="Casinha Garden" width="300" height="200">
           <h3>Casinha Trailer</h3>
           <p>R$ 1.700,00</p>
+            <a href="pagamento.html" class="button-comprar">Comprar</a>
         </div>
        <!-- Conteúdo Principal -->
     <main id="main-content">
