--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2 style="text-shadow: 1px 6px 10px rgba(9, 9, 9, 3.5); font-weight: bold; -webkit-text-stroke: 1px rgb(255, 255, 255); background-color: rgb(207, 63, 243); border: 2px solid white; padding: 2px;">
         Personalize o cantinho do seu pet do seu jeito... ou do dele!
     </h2>        
-    <img id="profile-image" src="pet.png" alt="Foto de Perfil">
+    <img id="profile-image" src="filhotinho.png" alt="Foto de Perfil">
 </main>
     <!-- Contêiner do Slideshow -->
     <div id="slideshow-wrapper">
